--- a/healttrackerapp/src/Styles/AuthStyles.css
+++ b/healttrackerapp/src/Styles/AuthStyles.css
@@ -1,4 +1,4 @@
-.register-main-container {
+.auth-main-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     background-color: rgb(207,223,248);
 }
 
-.register-container {
+.auth-container {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
@@ -16,18 +16,18 @@
     box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
 }
 
-.register-image-container, .register-form-container {
+.auth-image-container, .auth-form-container {
     flex: 1;
     padding: 20px;
 }
 
-.register-image-container img {
+.auth-image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.register-form-container {
+.auth-form-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -90,22 +90,32 @@
     height: 100px;
 }
 
-.register-form-container .form-group p{
+.auth-form-container .form-group p{
     height: 15px;
+}
+
+.login-container{
+    margin: auto;
+    width: 65%;
+}
+
+.login-button{
+    margin: auto;
+    width: 50%;
 }
 
 @media screen and (max-width: 768px) {
 
-    .register-main-container {
+    .auth-main-container {
         height: auto;
     }
 
-    .register-container {
+    .auth-container {
         margin: 5% 0px;
         flex-direction: column;
     }
   
-    .register-image-container, .register-form-container {
+    .auth-image-container, .auth-form-container {
       width: 100%;
     }
 }  
