--- a/healttrackerapp/src/Styles/HomeStyles.css
+++ b/healttrackerapp/src/Styles/HomeStyles.css
@@ -16,7 +16,7 @@
 }
 
 .text-container h1, .text-container h3{
-    color: rgb(109,139,236);
+    color: rgb(203, 133, 41);
 }
 
 .text-container h1{
