--- a/healttrackerapp/src/Styles/TargetStyles.css
+++ b/healttrackerapp/src/Styles/TargetStyles.css
@@ -5,7 +5,7 @@
 }
 
 .target-main-container {
-    height: 100vh;
+    height: auto;
     width: 100%;
     display: flex;
     justify-content: center;
