--- a/healttrackerapp/src/Styles/SuggestionStyles.css
+++ b/healttrackerapp/src/Styles/SuggestionStyles.css
@@ -1,5 +1,6 @@
 .suggestion-main-container{
     height: auto;
+    min-height: 100vh;
     text-align: center;
     width: 100%;
     display: flex;
