Implemented Google fit OAuth

--- a/healttrackerapp/src/Styles/CoachDashboardStyles.css
+++ b/healttrackerapp/src/Styles/CoachDashboardStyles.css
@@ -55,7 +55,7 @@
     width: max-content;
     color: white;
     padding: 3px 10px;
-    margin: 5px auto;
+    margin: 5px;
     border-radius: 15px;
     background-color: rgb(203,133,41);
 }
