Upload coach certificate implemented

--- a/src/Styles/AuthStyles.css
+++ b/src/Styles/AuthStyles.css
@@ -1,4 +1,5 @@
 .auth-main-container {
+    width: auto;
     min-height: 100vh;
     height: auto;
     background-color: rgb(255, 252, 248) !important;
@@ -115,6 +116,7 @@
     .auth-container {
         margin: 5% auto;
         flex-direction: column;
+        width: 95%;
     }
   
     .auth-image-container, .auth-form-container {
