--- a/src/Styles/NavbarStyles.css
+++ b/src/Styles/NavbarStyles.css
@@ -21,6 +21,19 @@
     display: flex;
 }
 
+.logout-nav-div {
+    margin-left: auto; 
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.logout-nav {
+    list-style-type: none;
+    cursor: pointer;
+}
+
+
 @media screen and (max-width: 768px){
     .auth-navs{
         display: block;
