--- a/src/Styles/UserDataStyles.css
+++ b/src/Styles/UserDataStyles.css
@@ -1,23 +1,26 @@
 .userdata-main-container{
     min-height: 100vh;
     height: auto;
-}
+    background-color: white !important;
+    margin: 20px;
+    border-radius: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+} 
 
-.userdata-row{
+.problem-main-row{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    align-items: center;
-    margin-top: 1%;
+    justify-content: center;
 }
 
 .userdata-container{
+    display: flex;
+    flex-wrap: wrap;
     border-radius: 10px;
-    padding: 2%;
+    padding: 2% 2% 0 2%;
     margin: 0 2%;
     margin: auto;
     width: 80%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .userdata-item-row{
@@ -27,18 +30,25 @@
 }
 
 .userdata-item-row p{
-    padding-top: 2px;
-    font-size: 1.3em;
+    font-size: 1.2rem;
 }
 
-.userdata-item-row h4{
+.userdata-item-row h5{
     margin: 0 5px 0 0;
 }
 
 .problem-container{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    flex: 50%;
+}
+
+.userdata-row{
+    padding: 0px 20px;
+    flex: 10%;
+}
+
+.problem-container{
+    padding: 0px 20px;
+    flex: 60%;
 }
 
 .problem-row{
@@ -46,7 +56,7 @@
     padding: 3px 10px;
     border-radius: 10px;
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin: 10px 10px 0 0;
 }
 
@@ -56,7 +66,7 @@
 }
 
 .Suggestion-container{
-    width: 80%;
+    width: 75%;
     margin: 4% auto 0 auto;
     padding-bottom: 4%;
 }
@@ -76,7 +86,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: white;
+    background-color: rgb(242, 242, 242);
     padding: 7px 20px;
     border-radius: 10px;
     margin: 10px 0;
@@ -84,7 +94,7 @@
 }
 
 .coach-sugg-desc{
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 
 .coach-sugg-date{
