--- a/src/Styles/HealthBotStyles.css
+++ b/src/Styles/HealthBotStyles.css
@@ -1,10 +1,3 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden; 
-}
-
 .query-container {
     display: flex;
     flex-wrap: wrap;
@@ -13,6 +6,14 @@ body, html {
     position: absolute;
     bottom: 0;
     position: fixed;
+}
+
+body::-webkit-scrollbar {
+    width: 15px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: rgb(228,228,228);   
 }
 
 .query-container input {
@@ -72,7 +73,7 @@ pre {
 .bot-container {
     display: flex;
     flex-direction: column;
-    height: 100vh; /* Full viewport height */
+    height: 100vh - 100px;
 }
 
 .bot-main-container {
